add text from mdn into html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   </head>
   <body>
 
+    <blockquote cite="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for...of">
+      <p>Both <code>for...in</code> and <code>for...of</code> statements iterate
+      over something. The main difference between them is in what they iterate
+      over. </p>
+
+      <p>The <code>for...in</code> statement iterates over the <strong>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Enumerability_and_ownership_of_properties">
+        enumerable properties</a></strong> of an object, in an arbitrary order.
+      </p>
+
+      <p>The <code>for...of</code> statement iterates over values that the <strong>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Iterators_and_Generators#Iterables">
+        iterable object</a></strong> defines to be iterated over.</p>
+    </blockquote>
+
+
+
     <script type="text/javascript" src="loop.js"></script>
   </body>
 </html>
