--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
 
+    https://images.unsplash.com/photo-1527266237111-a4989d028b4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80
+
     <h1>JavaScript Loops Using <code>for...of</code> and <code>for...in</code>.</h1>
 
     <p>Earlier this week I was working on a coding problem that involved looping through
@@ -115,8 +117,8 @@
       </blockquote>
 
       <p>As demonstrated above, strings have the Symbol.iterator method.
-        In addition, strings are also indexed by character. Thus, you can use
-        <code>for...of</code> loop, not a <code>for...in</code> to iterate over
+        In addition, strings are indexed by character. Thus, you can use
+        <code>for...of</code> or a <code>for...in</code> statement to iterate over
         characters in a string.</p>
 
     <script type="text/javascript" src="loop.js"></script>
